<resources>
    <string name="app_name">LectureRecorder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="start_recording">start recording</string>
    <string name="add_note">Add Note</string>
    <string name="time_zero">00:00:00</string>
    <string name="save_record">Save Record</string>
    <string name="checking_sign_in">Checking Sign In</string>
    <string name="login_failed">Login Failed</string>
    <string name="AUTH_TOKEN">AUTH_TOKEN_LECTURERECORDER</string>
    <string name="APPLICATION_SHARED_PREF">APPLICATION_SHARED_PREF</string>
    <string name="topics">Topics</string>
    <string name="courses">Courses</string>
    <string name="courses_lowercase">courses</string>
    <string name="lectures_underscore">lectures</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="subscribe">Subscribe</string>
    <string name="enter_lecture_name">Enter Lecture Name</string>
    <string name="enter_login">Enter Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="add">Add</string>
    <string name="favorite">Favorite</string>
    <string name="logout">Logout</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="search">Search</string>
    <string name="new_course">New Course</string>
    <string name="cancel_cap">Cancel</string>
    <string name="save_cap">Save</string>
    <string name="delete_cap">Delete</string>
    <string name="edit_course">Edit Course</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_is_not_your_topic">This is not your topic</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="unsubscribe_cap">Unsubscribe</string>
    <string name="lectures_cap">Lectures</string>
    <string name="this_is_not_your_lecture">This is not your lecture</string>
    <string name="new_topic">New Topic</string>
    <string name="no_topics_available_here">No topics available here</string>
    <string name="owned_addition_text">(my)</string>
    <string name="topic_deleted">Topic Deleted</string>
    <string name="topic_delete_error">Topic Delete Error</string>
    <string name="topic_updated">Topic Updated</string>
    <string name="topic_update_error">Topic Update Error</string>
    <string name="topic_creation_error">Topic Creation Error</string>
    <string name="subscribed_courses">Subscribed Courses</string>
    <string name="no_lectures_available_here">No lectures available here</string>
    <string name="lecture_deleted">Lecture Deleted</string>
    <string name="lecture_delete_error">Lecture Delete Error</string>
    <string name="course_subscribed">Course Subscribed</string>
    <string name="course_subscribe_error">Course Subscribe Error</string>
    <string name="no_courses_available_here">No courses available here</string>
    <string name="course_created">Course Created</string>
    <string name="course_creation_error">Course Creation Error</string>
    <string name="course_put">Course Put</string>
    <string name="course_updated">Course Updated</string>
    <string name="course_update_error">Course Update Error</string>
    <string name="course_deleted">Course Deleted</string>
    <string name="course_delete_error">Course Delete Error</string>
    <string name="topic_created">Topic Created</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="course_unsubscribed">Course Unsubscribed</string>
    <string name="use_home_button_to_exit">Use Home button to exit</string>
    <string name="reg_suc">Registered Successfully</string>
    <string name="notes_load_error">Notes Load Error</string>
    <string name="no_courses">No courses available here</string>
    <string name="course_create_error">Course Creation Error</string>
    <string name="not_your_course">This is not your course</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="lectures">Lectures</string>
    <string name="courses_subscribed">Course Subscribed</string>
    <string name="courses_subscribe_error">Course Subscribe Error</string>
    <string name="this_is_not_your_course">This is not your lecture</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="topic_create_error">Topic Creation Error</string>
    <string name="topic_put">Topic Put</string>
    <string name="topic_put_error">Topic Put Error</string>
    <string name="refresh_failed">Refresh Failed</string>
</resources>
